re order images

--- a/ud_outreach.htm
+++ b/ud_outreach.htm
@@ -272,34 +272,34 @@
 
 <p>Your One-Stop Career Center serves the entire community. But how can it become a known and trusted resource? Before you can serve the broadest possible range of career seekers and businesses, your One-Stop must first reach these customers.</p>
 
-<p>Since a One-Stop’s services are free and open to all, some One-Stops don’t actively market themselves. But this is a big mistake. Taking a passive approach to promoting services can lead to missed opportunities and to misunderstandings about what your One-Stop can offer.</p>
+<p>Since a One-Stop's services are free and open to all, some One-Stops don't actively market themselves. But this is a big mistake. Taking a passive approach to promoting services can lead to missed opportunities and to misunderstandings about what your One-Stop can offer.</p>
 
-<p>In this brief, we’ll identify some creative ways to overcome outreach and marketing challenges within the workforce-development system. One-Stop employees often see a distinction between formal “marketing” -- activities such as writing a marketing plan -- and the less formal “outreach” that is a part of every staff person’s role. This brief will address both of these aspects, and show you how to combine them into a public-relations strategy for your One-Stop. </p>
+<p>In this brief, we'll identify some creative ways to overcome outreach and marketing challenges within the workforce-development system. One-Stop employees often see a distinction between formal "marketing" -- activities such as writing a marketing plan -- and the less formal "outreach" that is a part of every staff person's role. This brief will address both of these aspects, and show you how to combine them into a public-relations strategy for your One-Stop. </p>
 
 <h3>Marketing Challenges</h3>
 
 <p>So, why is it so tricky to establish a marketing and outreach strategy for your One-Stop? </p>
 
-<p><em>Coordination:</em> First, marketing doesn’t just involve you and your staff. It involves all of your partners within the workforce-development system. A strong plan must meet the needs of these partners, pool their resources, and emphasize their common goals. </p>
+<p><em>Coordination:</em> First, marketing doesn't just involve you and your staff. It involves all of your partners within the workforce-development system. A strong plan must meet the needs of these partners, pool their resources, and emphasize their common goals. </p>
 
 <p><em>Diverse Career Seekers:</em> Your One-Stop should be a resource for the broadest possible range of career seekers in the community. This means disseminating a message effectively to various ethnic and cultural groups, in multiple languages, and across various socio-economic levels. </p>
 
-<p>Your One-Stop must be able to portray itself as a resource for career seekers with a wide variety of skills and backgrounds -- from entry-level to the most seasoned. So you’ll have to create marketing materials that speak to a wide range of individuals, but also speak to each of them, <em>personally</em>.</p>
+<p>Your One-Stop must be able to portray itself as a resource for career seekers with a wide variety of skills and backgrounds -- from entry-level to the most seasoned. So you'll have to create marketing materials that speak to a wide range of individuals, but also speak to each of them, <em>personally</em>.</p>
 
-<p><em>Diverse Business Customers:</em> Your One-Stop isn’t just marketing your services to career seekers -- businesses are also your customers. In order to be a valuable resource to a wide range of career seekers, you’ll need to create strong relationships with a wide variety of business customers. This includes making appropriate referrals of your career seekers to the businesses where they can use their talents, experience, and skills.</p>
+<p><em>Diverse Business Customers:</em> Your One-Stop isn't just marketing your services to career seekers -- businesses are also your customers. In order to be a valuable resource to a wide range of career seekers, you'll need to create strong relationships with a wide variety of business customers. This includes making appropriate referrals of your career seekers to the businesses where they can use their talents, experience, and skills.</p>
 
-<p><em>Limited Resources:</em> Your One-Stop has to make all this magic happen with limited resources for marketing and outreach. So you’ll need to use the funds you have for maximum effect. You’ll also have to coordinate the various spending rules of multiple agencies, and get all your partner organizations to put money on the table for collective marketing and outreach.</p>
+<p><em>Limited Resources:</em> Your One-Stop has to make all this magic happen with limited resources for marketing and outreach. So you'll need to use the funds you have for maximum effect. You'll also have to coordinate the various spending rules of multiple agencies, and get all your partner organizations to put money on the table for collective marketing and outreach.</p>
 
 <h3>Strategies for Success</h3>
 
-<p>The challenges we’ve identified above are real, but how they affect your organization is up to you. Many One-Stops are attacking these problems head on and are finding success in their creative efforts.  </p>
+<p>The challenges we've identified above are real, but how they affect your organization is up to you. Many One-Stops are attacking these problems head on and are finding success in their creative efforts.  </p>
 
-<p>Take the time to think about your product (workforce-development services) and your customers (career seekers and businesses). Just like a for-profit company, you’ll need to market your product to your particular audience. The first step in that process is developing a marketing plan. </p>
+<p>Take the time to think about your product (workforce-development services) and your customers (career seekers and businesses). Just like a for-profit company, you'll need to market your product to your particular audience. The first step in that process is developing a marketing plan. </p>
 
 <h4>Marketing Plans</h4>
 <p>Marketing plans help for-profit and not-for-profit businesses to answer these questions:</p>
 
-<h3>What exactly is the product or service we’re marketing?</h3>
+<h3>What exactly is the product or service we're marketing?</h3>
 
 <h3>Who are our customers?</h3>
 
@@ -320,7 +320,7 @@
 <li>Its possible collaborators</li></ul>
 </li>
 <li>A review of political, economic, social, and technological hurdles, and how these affect the organization</li>
-<li>Your organization’s strengths, weaknesses, opportunities, and biggest challenges</li>
+<li>Your organization's strengths, weaknesses, opportunities, and biggest challenges</li>
 <li>How the market is currently being served; i.e., how your current business and career-seeking customers are currently meeting their hiring and career goals.</li>
 <li>Alternative marketing strategies discussed to fill the gaps</li>
 <li>The selected marketing strategy, and ways you will measure its success</li>
@@ -335,7 +335,7 @@
 <p><a href="http://www.leapfrogit.com/clients_nvwib.shtml">http://www.leapfrogit.com/clients_nvwib.shtml</a></p>
 
 <h4>Internal Partnerships </h4>
-<p>Marketing plans can also be of great value in building a collaborative marketing approach. This type of planning will allow each partner to define their objectives, and the resources each can bring to the table. Rather than focusing on the limitations of the system, a collaborative process will allow all partners to explore the benefits of partnering to accomplish their goals. This discussion can be the first step in a better understanding among your partners of everyone’s goals and strengths, and the customers each partner is trying to reach and how they hope to serve them. This, in turn, can lead to a more integrated service delivery system. </p>
+<p>Marketing plans can also be of great value in building a collaborative marketing approach. This type of planning will allow each partner to define their objectives, and the resources each can bring to the table. Rather than focusing on the limitations of the system, a collaborative process will allow all partners to explore the benefits of partnering to accomplish their goals. This discussion can be the first step in a better understanding among your partners of everyone's goals and strengths, and the customers each partner is trying to reach and how they hope to serve them. This, in turn, can lead to a more integrated service delivery system. </p>
 
 <p>One example is the collaboration between three California Workforce Investment Boards: the North Valley WIB (NOVA), the San Mateo County WIB, and work2future, which serves the city of San Jose. Using funds from a USDOL Regional Innovation Grant, these three WIBs worked to develop a comprehensive plan, highlighting the challenges their markets faced alone and the potential pitfalls of joining three institutions with similar goals. The plan determined that the three WIBs would be better served pooling resources to face extensive unemployment in the region. </p>
 <p><a href="http://www.ccsce.com/PDF/New-Foundation-for-Collaborative-Workforce-Development.pdf">http://www.ccsce.com/PDF/New-Foundation-for-Collaborative-Workforce-Development.pdf</a></p> 
@@ -354,8 +354,8 @@
 
 <p><a href="https://learnwork.workforce3one.org/command/view.aspx?look=Building_Strong_CBO_Community_College_Partnerships&mode=info&pparams=">https://learnwork.workforce3one.org/command/view.aspx?look=Building_Strong_CBO_Community_College_Partnerships&mode=info&pparams=</a></p>
 
-<h4>Speaking Your Customers’ Language</h4>
-<p>For new One-Stop customers, the jargon of the workforce-development system can be very confusing. Most people who have recently been laid off do not realize they are “dislocated workers.” Most veterans are unlikely to know to ask for a “LVER.” Even for One-Stop professionals, the term transition can mean many things, including transition from military to civilian careers, transition from school to work, and transition from the incarceration system to society at large. </p>
+<h4>Speaking Your Customers' Language</h4>
+<p>For new One-Stop customers, the jargon of the workforce-development system can be very confusing. Most people who have recently been laid off do not realize they are "dislocated workers." Most veterans are unlikely to know to ask for a "LVER." Even for One-Stop professionals, the term transition can mean many things, including transition from military to civilian careers, transition from school to work, and transition from the incarceration system to society at large. </p>
 
 <p>So make sure all communications from your One-Stop are free of jargon and technical terminology, or that they explain it clearly in cases where it must be used. Customers must be able to understand exactly how your One-Stop can help them. Otherwise they will not choose your services.</p>
 
@@ -364,22 +364,22 @@
 <h4>Keeping the Communication Going</h4>
 <p>Every customer wants to see that what is important to them is also important to your One-Stop. This is especially true when they are faced with the stress and uncertainty of losing a job. Your organization will need to show sensitivity to changes in the job market, the economy, and the needs of your customers. This will not only help you attract more business customers and career seekers, but will also help you build stronger and more lasting relationships with all those customers. </p>
 
-<p>This communication can be accomplished with a regular e-newsletter sent out to customers on a mailing list. Ideally, you should generate two separate newsletters, one aimed at businesses and the other at career seekers. Southwestern Connecticut’s Regional Workforce Board, The WorkPlace, Inc., produces a monthly newsletter called the <em>Mobilizer</em>. It presents monthly highlights, promotes their events, and drives readers to their website.</p>
+<p>This communication can be accomplished with a regular e-newsletter sent out to customers on a mailing list. Ideally, you should generate two separate newsletters, one aimed at businesses and the other at career seekers. Southwestern Connecticut's Regional Workforce Board, The WorkPlace, Inc., produces a monthly newsletter called the <em>Mobilizer</em>. It presents monthly highlights, promotes their events, and drives readers to their website.</p>
 
 <h4>Using Word of Mouth</h4>
-<p>Your One-Stop’s reputation in the community can make it or break it. This is a complex dynamic, particularly with multiple partners involved, each of whom will create their own impression in the community. For example, a One-Stop might be co-located with the unemployment insurance office. This will make the One-Stop more widely known, but also can skew customers’ perceptions of its services. Positive word of mouth can drive new customers to your One-Stop -- and negative word of mouth can drive them away. </p>
+<p>Your One-Stop's reputation in the community can make it or break it. This is a complex dynamic, particularly with multiple partners involved, each of whom will create their own impression in the community. For example, a One-Stop might be co-located with the unemployment insurance office. This will make the One-Stop more widely known, but also can skew customers' perceptions of its services. Positive word of mouth can drive new customers to your One-Stop -- and negative word of mouth can drive them away. </p>
 
 <p>Remember that every interaction with a customer is an exercise in marketing. A professional, courteous front-desk staff will create the image of a professional, courteous One-Stop. A business leader who feels her needs were met by the One-Stop will speak highly of those services to her peers. Your staff can even ask satisfied customers to pass the word along.</p>
 
-<p>Your goal isn’t just to promote a positive image of your One-Stop, but also to promote the kinds of services it offers. At the One-Stop that is known in the community as “the Unemployment Office,” the staff is working to re-direct every conversation from unemployment to re-employment. Even simple catch phrases (e.g., “We’re about jobs”) that appear in print, in presentations, and in interactions with job seekers can make a difference. </p>
+<p>Your goal isn't just to promote a positive image of your One-Stop, but also to promote the kinds of services it offers. At the One-Stop that is known in the community as "the Unemployment Office," the staff is working to re-direct every conversation from unemployment to re-employment. Even simple catch phrases (e.g., "We're about jobs") that appear in print, in presentations, and in interactions with job seekers can make a difference. </p>
 
-<p>This is where the overall “feel” of your One-Stop is most important. If your One-Stop wants to be a resource for businesses and career seekers, it needs to look and feel like a professional environment. This will not only have an impact on how customers view the One-Stop, it will influence how the staff performs and how they talk about the One-Stop in the larger community.</p>
+<p>This is where the overall "feel" of your One-Stop is most important. If your One-Stop wants to be a resource for businesses and career seekers, it needs to look and feel like a professional environment. This will not only have an impact on how customers view the One-Stop, it will influence how the staff performs and how they talk about the One-Stop in the larger community.</p>
 
 <h3>Conclusion</h3>
 
-<p>Marketing is not just about selling a service; it’s about conveying an image. Your outreach efforts should give your customers information on the One-Stop, its services, and how to access them. But these efforts should also give each customer a sense of their own potential, and the possibilities of their career search. </p>
+<p>Marketing is not just about selling a service; it's about conveying an image. Your outreach efforts should give your customers information on the One-Stop, its services, and how to access them. But these efforts should also give each customer a sense of their own potential, and the possibilities of their career search. </p>
 
-<p>From the most formal, partnership-driven marketing plans, to simply working diligently with customers to create a good impression and positive word of mouth, marketing and outreach is a part of every aspect of your One-Stop Career Center. So budget some time for it -- you’ll see strong results!</p>
+<p>From the most formal, partnership-driven marketing plans, to simply working diligently with customers to create a good impression and positive word of mouth, marketing and outreach is a part of every aspect of your One-Stop Career Center. So budget some time for it -- you'll see strong results!</p>
 
 
 
