reorder pics. redo color. white text.

--- a/ud_resources.htm
+++ b/ud_resources.htm
@@ -234,7 +234,7 @@
 <option value="http://www.dol.gov/odep/topics/WorkforceRecruitmentProgram.htm">Workforce Recruitment Program (WRP)</option>
 <option value="http://www.dol.gov/odep/topics/Youth/">Youth in Transition</option>
 </select>
-<!--<input type="image" src="/odep/images/odepsearch.gif" name="Search" onClick="location=this.form.menu.options[this.form.menu.selectedIndex].value;" class="odepSearchButton"  value="Search">
+<input type="image" src="/odep/images/odepsearch.gif" name="Search" onClick="location=this.form.menu.options[this.form.menu.selectedIndex].value;" class="odepSearchButton"  value="Search">
 <input onClick="location=this.form.menu.options[this.form.menu.selectedIndex].value;" value="Select" type="button">
 </form>
 </div>
