near final updates

--- a/index.htm
+++ b/index.htm
@@ -330,11 +330,11 @@ strategies.</p>
 				<div>
 					<img src="images/resources.png" class="left" alt="Morterboard with HIRE ME" />
 				<ul>
-				<li>REAL-WORLD EXAMPLES: UNIVERSAL STRATEGIES IN THE FIELD</li>
-<li>STAFF COMPETENCIES: WHAT YOUR STAFF NEED TO KNOW</li>
-<li>NEEDS ASSESSMENT: WHERE YOU ARE AND HOW TO IMPROVE</li>
-<li>INTERACTIVE LEARNING OPPORTUNITIES: EXERCISES AND
-ONLINE TRAINING</li></div>
+				<li>Real-World Examples: Universal Strategies in the Field</li>
+<li>Staff Competencies: What Your Staff Need to Know</li>
+<li>Needs Assessment: Where You Are and How to Improve</li>
+<li>Interactive Learning Opportunities: Exercises and
+Online Training</li></div>
 			</div>
 
 
